3627.	[bug]		RPZ changes were not effective on slaves. [RT #34450]

3625.	[bug]		Don't send notify messages to machines outside of the
			test setup.

	--- 9.8.6rc1 released ---

3621.	[security]	Incorrect bounds checking on private type 'keydata'
			can lead to a remotely triggerable REQUIRE failure
			(CVE-2013-4854). [RT #34238]

3615.	[cleanup]	"configure" now finishes by printing a summary
			of optional BIND features and whether they are
			active or inactive. ("configure --enable-full-report"
			increases the verbosity of the summary.) [RT #31777]

3614.	[port]		Check for <linux/types.h>. [RT #34162]

3611.	[bug]		Improved resistance to a theoretical authentication
			attack based on differential timing.  [RT #33939]

3610.	[cleanup]	win32: Some executables had been omitted from the
			installer. [RT #34116]

3608.	[port]		win32: added todos.pl script to ensure all text files
			the win32 build depends on are converted to DOS
			newline format. [RT #22067]

3607.	[bug]		dnssec-keygen had broken 'Invalid keyfile' error
			message. [RT #34045]

	--- 9.8.6b1 released ---

3605.	[port]		win32: Addressed several compatibility issues
			with newer versions of Visual Studio. [RT #33916]

3603.	[bug]		Install <isc/stat.h>. [RT #33956]

3601.	[bug]		Added to PKCS#11 openssl patches a value len
			attribute in DH derive key. [RT #33928]

3600.	[cleanup]	dig: Fixed a typo in the warning output when receiving
			an oversized response. [RT #33910]

3599.	[tuning]	Check for pointer equivalence in name comparisons.
			[RT #18125]

3594.	[maint]		Update config.guess and config.sub. [RT #33816]

3592.	[doc]		Moved documentation of rndc command options to the
			rndc man page. [RT #33506]

3588.	[bug]		dig: addressed a memory leak in the sigchase code
			that could cause a shutdown crash.  [RT #33733]

3587.	[func]		'named -g' now checks the logging configuration but
			does not use it. [RT #33473]

3586.	[bug]		Handle errors in xmlDocDumpFormatMemoryEnc. [RT #33706]
